--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/png" href="favicon.png" />
-<title>音→幾何学イラストジェネレーター（duration連動 + ギャラリー）</title>
+<link rel="icon" type="image/png" href="https://github.com/khk-pixel/SoundArt/blob/main/assets/favicon.png?raw=true" />
+<title>SoundArt</title>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06T4RKD6H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L06T4RKD6H');
+</script>
 <style>
 :root { --bg:#071026; --panel:rgba(255,255,255,0.03); --text:#e6eef6 }
 html,body{height:100%;margin:0;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial;background:linear-gradient(180deg,#071026,#08142a);color:var(--text)}
@@ -645,3 +653,4 @@ ctx.fillText('ここに幾何学的でカラフルな音のイラストが生成
 </script>
 </body>
 </html>
+
